updated itoa, wrote itoa test function

--- a/unit_tests/makefile
+++ b/unit_tests/makefile
@@ -1,6 +1,9 @@
 atoi_test: atoi_test.c ../memory.c ../data.c
 	gcc atoi_test.c ../memory.c ../data.c -o atoi_test
 
+itoa_test: itoa_test.c ../memory.c ../data.c
+	gcc itoa_test.c ../memory.c ../data.c -o itoa_test
+
 mem_test: ../memory.c ../data.c mem_test.c
 	gcc mem_test.c ../memory.c ../data.c -o mem_test
 
