--- a/source/makefile
+++ b/source/makefile
@@ -19,9 +19,6 @@ include sources.mk
 
 OS = $(shell uname)
 STD = c99
-INCLUDES = -I../includes -I../objects -I.
-SRCS = project_1.c main.c memory.c data.c
-OBJ_NAMES = $(SRCS:.c=.o)
 OBJS = ../objects/$(OBJ_NAMES)
 LIBS = project1.a
 
@@ -29,55 +26,46 @@ LIBS = project1.a
 MISC := ../misc
 OBJDIR := ../obj
 LOGS := ../logs
+LIBS := ../libs
 
 # Make any object file
 %.o : %.c | $(OBJDIR) $(LOGS)
 	$(CC) -c $(@:.o=.c) -o $(OBJDIR)/$@
-	@date +%T" Compiled $?" | tee -a $(LOGS)/makeLog
+	@date +%T" Compiled $?" | tee -a $(LOGS)/makeLog.txt
 
+# Make all object files
 .PHONY : compile-all
 compile-all : $(OBJ_NAMES)
 
+# Make any preporcessed output file
+%.i : %.c | $(MISC) $(LOGS)
+	$(CC) -E $(@:.i=.c) -o $(MISC)/$@
+	@date +%T" Created .i file for $?" | tee -a $(LOGS)/makeLog.txt
+
+# Make any assembly output file
+%.asm : %.c | $(MISC) $(LOGS)
+	$(CC) -S $(@:.asm=.c) -o $(MISC)/$@
+	@date +%T" Created .asm file for $?" | tee -a $(LOGS)/makeLog.txt
+
+.PHONY : build
 build: project1 project1.dep
 
 .PHONY : project1
 project1: $(OBJ_NAMES) $(LIBS) | $(OBJDIR)
-	$(CC) $(CFLAGS) $(INCLUDES) $(LDFLAGS) $(OBJS) -o $(OBJDIR)/project1
-	size -A $(OBJS)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(addprefix $(OBJDIR)/,$(OBJ_NAMES)) -o $(OBJDIR)/$@
+	size -A $(OBJDIR)/$@
+	@date +%T" Built project" | tee -a $(LOGS)/makeLog.txt
 
-libproject1.a: $(OBJ_NAMES)
-	ar -rcs ../libs/libproject1.a $(OBJS)
+libproject1.a: $(OBJ_NAMES) | $(LIBS)
+	ar -rcs $(LIBS)/libproject1.a $(OBJDIR)/$(OBJ_NAMES)
 
 project1.dep: $(SRCS) | $(MISC)
-	$(CC) -MM $(SRCS) > $(MISC)/project1.dep
-
-main.i: main.c | $(MISC)
-	$(CC) -E $(INCLUDES) main.c -o $(MISC)/main.i
-
-main.asm: main.c | $(MISC)
-	$(CC) -S $(INCLUDES) main.c -o $(MISC)/main.asm
-
-data.i: data.c | $(MISC)
-	$(CC) -E $(INCLUDES) data.c -o $(MISC)/data.i
-
-data.asm: data.c | $(MISC)
-	$(CC) -S $(INCLUDES) data.c -o $(MISC)/data.asm
-
-memory.i: memory.c | $(MISC)
-	$(CC) -E $(INCLUDES) memory.c -o $(MISC)/memory.i
-
-memory.asm: memory.c | $(MISC)
-	$(CC) -S $(INCLUDES) memory.c -o $(MISC)/memory.asm
-
-project_1.i: project_1.c | $(MISC)
-	$(CC) -E $(INCLUDES) project_1.c -o $(MISC)/project_1.i
-
-project_1.asm: project_1.c | $(MISC)
-	$(CC) -S $(INCLUDES) project_1.c -o $(MISC)/project_1.asm
+	$(CC) -MM $(SRCS) > $(MISC)/$@
 
 .PHONY : clean
 clean :
-	-rm -f $(OBJDIR)/project1 $(OBJDIR)/*.o $(MISC)/*.dep $(MISC)/*.map $(MISC)/*.i $(OBJDIR)/*.out $(MISC)/*.asm
+	-rm -f $(OBJDIR)/* $(MISC)/* ./project1.map
+	@date +%T" Cleaned project space" | tee -a $(LOGS)/makeLog.txt
 
 .PHONY : print
 print: data.c main.c memory.c project_1.c | $(LOGS)
@@ -91,3 +79,6 @@ $(OBJDIR):
 
 $(LOGS):
 	mkdir $(LOGS)
+
+$(LIBS):
+	mkdir $(LIBS)
